--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
   <footer class="footer">
     <div class="container footer__content">
       <div class="footer__brand">
-        <img src="assets/logo.png" alt="Logo Limpa Vidros" class="footer__logo" />
+        <img src="assets/Logo.png" alt="Logo Limpa Vidros" class="footer__logo" />
         <p>Limpeza profissional de vidros, janelas, sacadas e fachadas.</p>
       </div>
 
