Atualização_final_logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="header">
     <div class="container header__content">
       <a class="brand" href="#inicio" aria-label="Ir para o início">
-        <img src="assets/Logo.png" alt="Logo Limpa Vidros" class="brand__logo" />
+        <img src="assets/logo.png" alt="Logo Limpa Vidros" class="brand__logo" />
         <div class="brand__text">
           <strong>Limpa Vidros</strong>
           <span>Limpeza profissional</span>
@@ -305,7 +305,7 @@
   <footer class="footer">
     <div class="container footer__content">
       <div class="footer__brand">
-        <img src="assets/Logo.png" alt="Logo Limpa Vidros" class="footer__logo" />
+        <img src="assets/logo.png" alt="Logo Limpa Vidros" class="footer__logo" />
         <p>Limpeza profissional de vidros, janelas, sacadas e fachadas.</p>
       </div>
 
